# TestAIAgentDev

./: .env.example  README.md  pyproject.toml
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  fashion_analyzer.py  orchestrator.py  sustainability_estimator.py
src/tools/: __init__.py  image_material_tool.py  web_search.py
