[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fashion-sustainability-agents"
version = "0.1.0"
description = "Collaborative LangChain agents for fashion material analysis and sustainability estimation"
authors = [{name = "AI Engineer"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.2.0",
    "langchain-openai>=0.1.7",
    "langchain-community>=0.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.3.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]
